# bitcoin-knots-portable

./: .gitignore  BLOAT_REPORT.md  BUILD.md  MINIMALIST_SYSTEMS_REPORT.md  README.md  README_DIST.txt  index.html  package-lock.json  package.json  package.ps1  vite.config.ts
.github/workflows/: release.yml
public/: mock_data.json
src/: App.tsx  index.css  minimal.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FeeDisplay.tsx  MempoolSearch.tsx  PeersDisplay.tsx  StatusIndicator.tsx  StorageInfo.tsx  SyncProgress.tsx  SystemLog.tsx
src/lib/: api.ts
src/types/: index.ts
