[package]
name = "bitcoin-portable"
version = "0.2.7"
description = "Minimalist Bitcoin Knots Node Wrapper"
authors = ["Acreonte"]
edition = "2021"

[lib]
name = "bitcoin_portable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoincore-rpc = "0.19.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
